[package]
name = "rcap"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.153"
nix = { version = "0.28.0", features = ["net"] }
pcap = "1.2.0"
socket2 = { version = "0.5.6", features = ["all"] }
tokio = { version = "1.36.0", features = ["net"] }

[dev-dependencies]
ieee80211 = "0.1.3"
mac-parser = "0.1.4"
scroll = "0.12.0"
tokio = {version = "1.36.0", features = ["full"]}
