[package]
name = "aircap"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.153"
nix = { version = "0.28.0", features = ["net"] }
socket2 = { version = "0.5.6", features = ["all"] }
tokio = { version = "1.36.0", features = ["net"], optional = true }

[features]
tokio = ["dep:tokio"]

async = ["tokio"]
default = ["async"]
